--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christine Kimani Portfolio</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="back.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="header">
         <div class="slide1">
-        <h1>Christine <br>Kimani</h1>
-        <p>Aspiring Designer, Programmer, and Photographer</p>
+            <h1>Christine <br>Kimani</h1>
+            <p>Aspiring Designer, Programmer, and Photographer</p>
         </div>
     </div>
     <div class="about-me">
         <div class="slide2">
-        <h2>About <br>Me</h2>
-        <p>I am Christine Kimani, a recent high school graduate with a passion for design, programming, and photography. I am enthusiastic about leveraging my skills to create innovative solutions and capture beautiful moments.</p>
+            <h2>About <br>Me</h2>
+            <p>I am Christine Kimani, a recent high school graduate with a passion for design, programming, and photography. I am enthusiastic about leveraging my skills to create innovative solutions and capture beautiful moments.</p>
+        </
+
     </div>
     </div>
 
